write function to split in smaller box the confs

--- a/phase_identification.ipynb
+++ b/phase_identification.ipynb
@@ -391,6 +391,29 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def split_sys_in_squares(pos, edge_size):\n",
+        "    '''This function takes in a list of x,y coordinates and splits them up into\n",
+        "    smaller boxes with the size of edge_size. The boxes are returned in a list.'''\n",
+        "    num_boxes = int(1 / edge_size)\n",
+        "    smaller_boxes = [[] for _ in range(num_boxes * num_boxes)]\n",
+        "    for x, y in pos:\n",
+        "        if x < 0 or y < 0 or x > 1 or y > 1:\n",
+        "            # Coordinates must be between 0 and 1.\n",
+        "            raise ValueError(\"Coordinates must be between 0 and 1.\")\n",
+        "        box_x = int(x / edge_size)\n",
+        "        box_y = int(y / edge_size)\n",
+        "        smaller_boxes[box_x + box_y * num_boxes].append((x, y))\n",
+        "    return smaller_boxes\n",
+        "\n",
+        "new_pos = split_sys_in_squares(train_data[0], 0.1)\n"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "H95mVo5Bf6ak"
