improvements to the train set

--- a/phase_identification.ipynb
+++ b/phase_identification.ipynb
@@ -68,7 +68,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 72,
       "metadata": {
         "id": "rfDnFX2lfzUf"
       },
@@ -132,7 +132,16 @@
             "0.728 1\n",
             "0.714 7\n",
             "0.706 6\n",
-            "1509\n"
+            "0.702 8\n",
+            "0.739 1\n",
+            "0.74 1\n",
+            "0.724 1\n",
+            "0.726 7\n",
+            "0.734 1\n",
+            "0.725 1\n",
+            "0.726 8\n",
+            "0.716 6\n",
+            "2568\n"
           ]
         }
       ],
@@ -162,7 +171,7 @@
         "    #print(phase_label)\n",
         "    \n",
         "    for j, trj in enumerate(glob.glob(fi + '/Trj/xyz.dump.*')):\n",
-        "        if j>30:\n",
+        "        if j>50:\n",
         "            break\n",
         "        # load the trajectory\n",
         "        #print(phase_label, trj)\n",
@@ -179,7 +188,7 @@
         "\n",
         "        conf_counter += 1\n",
         "    \n",
-        "    if conf_counter >= 1500:\n",
+        "    if conf_counter >= 4000:\n",
         "        break\n",
         "\n",
         "print(conf_counter)"
@@ -312,7 +321,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 73,
       "metadata": {},
       "outputs": [
         {
@@ -340,7 +349,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 74,
       "metadata": {
         "id": "r1nnNjWOgdHN"
       },
@@ -349,8 +358,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "(1509, 16384, 2)\n",
-            "(1509,)\n"
+            "(2568, 16384, 2)\n",
+            "(2568,)\n"
           ]
         }
       ],
@@ -364,7 +373,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 75,
       "metadata": {},
       "outputs": [
         {
@@ -413,7 +422,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 76,
       "metadata": {},
       "outputs": [
         {
@@ -509,7 +518,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 77,
       "metadata": {},
       "outputs": [
         {
@@ -524,7 +533,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "0.0 %357852882704 %%\r"
+            "0.0 %202492211839 %%\r"
           ]
         }
       ],
@@ -556,7 +565,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 78,
       "metadata": {},
       "outputs": [
         {
@@ -564,7 +573,7 @@
           "output_type": "stream",
           "text": [
             "(100, 189, 2)\n",
-            "(150900, 189, 2)\n",
+            "(256800, 189, 2)\n",
             "(100, 189, 2)\n",
             "(4200, 189, 2)\n"
           ]
@@ -582,15 +591,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 79,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "150900\n",
-            "1509\n",
+            "256800\n",
+            "2568\n",
             "4200\n",
             "42\n"
           ]
@@ -619,24 +628,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 94,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "(189, 2)\n"
+            "(256800, 189, 2)\n"
           ]
         }
       ],
       "source": [
-        "print(padded_train_data[0].shape)"
+        "print(padded_train_data.shape)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 102,
       "metadata": {
         "id": "TnRG1j78f77R"
       },
@@ -652,7 +661,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 103,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -667,7 +676,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 104,
       "metadata": {},
       "outputs": [
         {
@@ -675,45 +684,45 @@
           "output_type": "stream",
           "text": [
             "Epoch 1/20\n",
-            "4716/4716 [==============================] - 20s 4ms/step - loss: 0.7977 - accuracy: 0.6908 - val_loss: 0.7603 - val_accuracy: 0.6662\n",
+            "8025/8025 [==============================] - 34s 4ms/step - loss: 0.9176 - accuracy: 0.6379 - val_loss: 0.7626 - val_accuracy: 0.6764\n",
             "Epoch 2/20\n",
-            "4716/4716 [==============================] - 19s 4ms/step - loss: 0.7442 - accuracy: 0.6994 - val_loss: 0.7236 - val_accuracy: 0.6757\n",
+            "8025/8025 [==============================] - 32s 4ms/step - loss: 0.8061 - accuracy: 0.6617 - val_loss: 0.7140 - val_accuracy: 0.6876\n",
             "Epoch 3/20\n",
-            "4716/4716 [==============================] - 19s 4ms/step - loss: 0.7238 - accuracy: 0.7026 - val_loss: 0.7437 - val_accuracy: 0.6671\n",
+            "8025/8025 [==============================] - 31s 4ms/step - loss: 0.7807 - accuracy: 0.6653 - val_loss: 0.7512 - val_accuracy: 0.6812\n",
             "Epoch 4/20\n",
-            "4716/4716 [==============================] - 18s 4ms/step - loss: 0.7101 - accuracy: 0.7048 - val_loss: 0.7445 - val_accuracy: 0.6581\n",
+            "8025/8025 [==============================] - 32s 4ms/step - loss: 0.7698 - accuracy: 0.6672 - val_loss: 0.6884 - val_accuracy: 0.6876\n",
             "Epoch 5/20\n",
-            "4716/4716 [==============================] - 18s 4ms/step - loss: 0.7033 - accuracy: 0.7056 - val_loss: 0.7126 - val_accuracy: 0.6719\n",
+            "8025/8025 [==============================] - 33s 4ms/step - loss: 0.7595 - accuracy: 0.6685 - val_loss: 0.6822 - val_accuracy: 0.6933\n",
             "Epoch 6/20\n",
-            "4716/4716 [==============================] - 19s 4ms/step - loss: 0.6932 - accuracy: 0.7073 - val_loss: 0.6960 - val_accuracy: 0.6833\n",
+            "8025/8025 [==============================] - 32s 4ms/step - loss: 0.7540 - accuracy: 0.6692 - val_loss: 0.7354 - val_accuracy: 0.6838\n",
             "Epoch 7/20\n",
-            "4716/4716 [==============================] - 19s 4ms/step - loss: 0.6863 - accuracy: 0.7085 - val_loss: 0.6932 - val_accuracy: 0.6900\n",
+            "8025/8025 [==============================] - 31s 4ms/step - loss: 0.7483 - accuracy: 0.6700 - val_loss: 0.7568 - val_accuracy: 0.6805\n",
             "Epoch 8/20\n",
-            "4716/4716 [==============================] - 19s 4ms/step - loss: 0.6829 - accuracy: 0.7088 - val_loss: 0.7128 - val_accuracy: 0.6769\n",
+            "8025/8025 [==============================] - 30s 4ms/step - loss: 0.7448 - accuracy: 0.6707 - val_loss: 0.6701 - val_accuracy: 0.6912\n",
             "Epoch 9/20\n",
-            "4716/4716 [==============================] - 19s 4ms/step - loss: 0.6804 - accuracy: 0.7090 - val_loss: 0.6769 - val_accuracy: 0.6840\n",
+            "8025/8025 [==============================] - 29s 4ms/step - loss: 0.7412 - accuracy: 0.6705 - val_loss: 0.6883 - val_accuracy: 0.6924\n",
             "Epoch 10/20\n",
-            "4716/4716 [==============================] - 19s 4ms/step - loss: 0.6783 - accuracy: 0.7099 - val_loss: 0.7005 - val_accuracy: 0.6783\n",
+            "8025/8025 [==============================] - 30s 4ms/step - loss: 0.7378 - accuracy: 0.6717 - val_loss: 0.6682 - val_accuracy: 0.7005\n",
             "Epoch 11/20\n",
-            "4716/4716 [==============================] - 19s 4ms/step - loss: 0.6743 - accuracy: 0.7101 - val_loss: 0.7339 - val_accuracy: 0.6752\n",
+            "8025/8025 [==============================] - 27s 3ms/step - loss: 0.7338 - accuracy: 0.6724 - val_loss: 0.6638 - val_accuracy: 0.6967\n",
             "Epoch 12/20\n",
-            "4716/4716 [==============================] - 19s 4ms/step - loss: 0.6696 - accuracy: 0.7112 - val_loss: 0.7706 - val_accuracy: 0.6805\n",
+            "8025/8025 [==============================] - 25s 3ms/step - loss: 0.7314 - accuracy: 0.6732 - val_loss: 0.6605 - val_accuracy: 0.6998\n",
             "Epoch 13/20\n",
-            "4716/4716 [==============================] - 19s 4ms/step - loss: 0.6688 - accuracy: 0.7117 - val_loss: 0.6916 - val_accuracy: 0.6910\n",
+            "8025/8025 [==============================] - 29s 4ms/step - loss: 0.7293 - accuracy: 0.6736 - val_loss: 0.6473 - val_accuracy: 0.6940\n",
             "Epoch 14/20\n",
-            "4716/4716 [==============================] - 19s 4ms/step - loss: 0.6679 - accuracy: 0.7118 - val_loss: 0.6764 - val_accuracy: 0.6881\n",
+            "8025/8025 [==============================] - 32s 4ms/step - loss: 0.7281 - accuracy: 0.6741 - val_loss: 0.6781 - val_accuracy: 0.6886\n",
             "Epoch 15/20\n",
-            "4716/4716 [==============================] - 16s 3ms/step - loss: 0.6656 - accuracy: 0.7120 - val_loss: 0.6683 - val_accuracy: 0.6948\n",
+            "8025/8025 [==============================] - 30s 4ms/step - loss: 0.7259 - accuracy: 0.6741 - val_loss: 0.8344 - val_accuracy: 0.6498\n",
             "Epoch 16/20\n",
-            "4716/4716 [==============================] - 15s 3ms/step - loss: 0.6660 - accuracy: 0.7120 - val_loss: 0.7318 - val_accuracy: 0.6688\n",
+            "8025/8025 [==============================] - 32s 4ms/step - loss: 0.7255 - accuracy: 0.6745 - val_loss: 0.6634 - val_accuracy: 0.6957\n",
             "Epoch 17/20\n",
-            "4716/4716 [==============================] - 17s 4ms/step - loss: 0.6606 - accuracy: 0.7123 - val_loss: 0.6699 - val_accuracy: 0.6862\n",
+            "8025/8025 [==============================] - 31s 4ms/step - loss: 0.7232 - accuracy: 0.6736 - val_loss: 0.6794 - val_accuracy: 0.6964\n",
             "Epoch 18/20\n",
-            "4716/4716 [==============================] - 19s 4ms/step - loss: 0.6594 - accuracy: 0.7134 - val_loss: 0.6633 - val_accuracy: 0.6976\n",
+            "8025/8025 [==============================] - 31s 4ms/step - loss: 0.7220 - accuracy: 0.6754 - val_loss: 0.6499 - val_accuracy: 0.6988\n",
             "Epoch 19/20\n",
-            "4716/4716 [==============================] - 19s 4ms/step - loss: 0.6621 - accuracy: 0.7125 - val_loss: 0.7101 - val_accuracy: 0.6843\n",
+            "8025/8025 [==============================] - 32s 4ms/step - loss: 0.7198 - accuracy: 0.6746 - val_loss: 0.6867 - val_accuracy: 0.6910\n",
             "Epoch 20/20\n",
-            "4716/4716 [==============================] - 19s 4ms/step - loss: 0.6584 - accuracy: 0.7131 - val_loss: 0.6910 - val_accuracy: 0.6879\n"
+            "8025/8025 [==============================] - 32s 4ms/step - loss: 0.7198 - accuracy: 0.6753 - val_loss: 0.6606 - val_accuracy: 0.7005\n"
           ]
         }
       ],
@@ -723,23 +732,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 105,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "132/132 [==============================] - 0s 3ms/step - loss: 0.6910 - accuracy: 0.6879\n"
+            "132/132 [==============================] - 0s 2ms/step - loss: 0.6606 - accuracy: 0.7005\n"
           ]
         },
         {
           "data": {
             "text/plain": [
-              "[0.6910341382026672, 0.6878571510314941]"
+              "[0.6605792045593262, 0.7004761695861816]"
             ]
           },
-          "execution_count": 55,
+          "execution_count": 105,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -750,14 +759,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 106,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "132/132 [==============================] - 0s 2ms/step\n"
+            "132/132 [==============================] - 0s 3ms/step\n"
           ]
         }
       ],
@@ -769,21 +778,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 109,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "0\n",
-            "[3.1519994e-01 6.8122625e-01 3.5413750e-03 3.2505417e-05]\n",
+            "1\n",
+            "[0.05942359 0.6814347  0.18187654 0.07726534]\n",
             "0.732 3\n"
           ]
         }
       ],
       "source": [
-        "index = 603\n",
+        "index = 1003\n",
         "print(padded_test_labels[index])\n",
         "print(predictions[index])\n",
         "print_test_density(index)"
