introduce some text

--- a/network_analysis.ipynb
+++ b/network_analysis.ipynb
@@ -131,6 +131,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to create the adjacency matrix, we compute the distances between al pair of particles in the configurations, then we discretize the distance matrix with the threshold 1.5, and last we delete the diagonal to avoid self-contacts."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -196,32 +203,24 @@
    "source": [
     "#plot a nice view of the distance matrix and of the configurations\n",
     "\n",
-    "index = 3\n",
-    "dist = distance_matrix(new_data_array[index], new_data_array[index])\n",
-    "# remove the diagonal\n",
-    "dist_discret = np.where(dist <= 1.5, 1, 0)\n",
-    "dist_nodiag = dist_discret - np.diag(np.diag(dist_discret))\n",
+    "density_analysis_array = [0.705, 0.710, 0.715, 0.720, 0.725, 0.730, 0.735, 0.740] \n",
     "\n",
-    "print(dist[15,3])\n",
-    "print(new_data_array[index][15], new_data_array[index][3])\n",
-    "print(np.sqrt((new_data_array[index][15,0] - new_data_array[index][3,0])**2 + (new_data_array[index][15,1] - new_data_array[index][3,1])**2))\n",
     "\n",
-    "plt.plot(new_data_array[index][:,0], new_data_array[index][:,1], 'o')\n",
-    "plt.show()\n",
+    "fig_conf, ax_conf = plt.subplots(figsize=(40,20), nrows=2, ncols=4)\n",
+    "fig_dm, ax_dm = plt.subplots(figsize=(40,20), nrows=2, ncols=4)\n",
     "\n",
-    "plt.imshow(dist, origin='lower', interpolation='nearest')\n",
-    "plt.colorbar()\n",
-    "plt.show()\n",
+    "for fi in density_analysis_array:\n",
+    "    index = data_fis.index(fi)\n",
+    "    dist = distance_matrix(new_data_array[index], new_data_array[index])\n",
+    "    dist_discret = np.where(dist <= 1.5, 1, 0)\n",
+    "    dist_nodiag = dist_discret - np.diag(np.diag(dist_discret))\n",
     "\n",
-    "plt.clf()\n",
-    "plt.imshow(dist_discret, origin='lower', interpolation='nearest')\n",
-    "plt.colorbar()\n",
-    "plt.show()\n",
+    "    ax_conf.set_title('Density = {}'.format(fi))\n",
+    "    ax_dm.set_title('Density = {}'.format(fi))\n",
     "\n",
-    "plt.clf()\n",
-    "plt.imshow(dist_nodiag, origin='lower', interpolation='nearest')\n",
-    "plt.colorbar()\n",
-    "plt.show()"
+    "    ax_conf.plot(smaller_data_array[index][:,0], smaller_data_array[index][:,1], 'o')\n",
+    "    ax_dm.imshow(dist, origin='lower', interpolation='nearest')\n",
+    "    \n"
    ]
   },
   {
@@ -329,11 +328,20 @@
     "    # plot the graph\n",
     "    clustering = nx.clustering(G_small)\n",
     "    ax.set_title('Density: ' + str(fi))\n",
-    "    nx.draw(G_small, with_labels=False, ax=ax,  \n",
+    "    # plot circular graph\n",
+    "\n",
+    "    nx.draw(G_small, with_labels=False, ax=ax, pos=nx.circular_layout(G_small),\n",
     "            font_weight='bold', node_size=100, node_color=list(clustering.values()),\n",
     "            cmap=plt.cm.Reds, vmin=0, vmax=1)\n",
     "    #shortest_path_avg.append(nx.average_shortest_path_length(G_small))\n",
     "    #diameter_avg.append(nx.diameter(G_small))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is a passage from random graph to a graph with attachment probability p = 1 "
    ]
   },
   {
@@ -391,6 +399,10 @@
     "ax[1,1].plot(density_analysis_array, transitivity_avg, 'o-', color='green')\n",
     "#ax[0,2].plot(density_analysis_array, shortest_path_avg, 'o-', color='orange')\n",
     "#ax[1,2].plot(density_analysis_array, diameter_avg, 'o-', color='purple')\n",
+    "\n",
+    "ax[0,1].vlines(0.726, 0, 10, color='black', linestyle='--')\n",
+    "ax[1,0].vlines(0.726, 0, 1, color='black', linestyle='--')\n",
+    "ax[1,1].vlines(0.726, 0, 1, color='black', linestyle='--')\n",
     "\n",
     "ax[0,0].set_title('Grade distribution')\n",
     "ax[0,1].set_title('Average grade')\n",
@@ -481,13 +493,6 @@
     "        font_weight='bold', node_size=100, node_color=list(closeness_centr.values()),\n",
     "        cmap=plt.cm.viridis, vmin=np.min(list(closeness_centr.values())), vmax=np.max(list(closeness_centr.values())))\n",
     "#fig.colorbar(plt.cm.ScalarMappable(norm=plt.Normalize(0, 1)), ax=axs[:, 3], shrink=0.6, cmap=plt.cm.viridis)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "There is a passage from random graph to a graph with attachment probability p = 1 "
    ]
   },
   {
