--- a/phase_identification.ipynb
+++ b/phase_identification.ipynb
@@ -16,7 +16,7 @@
         "id": "xL_9qiV-ui93"
       },
       "source": [
-        "# Phase Identification\n",
+        "# Simple Deep Learning implementation of a 2d-crystal phase classifier \n",
         "\n",
         "Crystals in two-dimensions can be in three different phases: liquid, hexatic and solid. The identification of the phase can be done with spatial and orentational correlation functions, which are computationally costly and needs large systems to be computed.\n",
         "\n",
